# MinecraftBeaconRainbowCircle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  minecraft_beacon_circle.pot
include/: BeaconColorCalculator.h  Color.h  MCGlass.h  i18n.h  utils.h
locale/: en.po  zh_CN.po
src/: BeaconColorCalculator.cpp  Color.cpp  MCGlass.cpp  get_executable_path.cpp  i18n.cpp  main.cpp
